--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.EmpDetailsActivity"></activity>
-        <activity android:name=".Activities.EmpListActivity" />
+        <activity android:name=".Activities.EmpListActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        />
         <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
