--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,12 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:4.7.2"
     implementation 'com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:1.0.0'
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
-
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
 }
 repositories {
     mavenCentral()
