--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Activities.EmpDetailsActivity"></activity>
+        android:theme="@style/AppTheme"
+        >
         <activity android:name=".Activities.EmpListActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:configChanges="orientation|screenSize"
         />
         <activity android:name=".Activities.MainActivity">
             <intent-filter>
